# [#29424] Multilevel select collapsed. Thanks Sergey Romanov. (Fix #1119)

--- a/templates/protostar/css/template.css
+++ b/templates/protostar/css/template.css
@@ -6609,10 +6609,6 @@ body.site.fluid {
 .accordion-group {
 	background: #fff;
 }
-.select[multiple],
-select[size] {
-	height: 28px;
-}
 .site-title {
 	font-size: 40px;
 	line-height: 48px;
